--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../public/css">
     <title>Document</title>
 </head>
 <body>
     <h1>Served From Static Pages</h1>
     <h4>Server.js</h4>
 </body>
-<script src="/js/script.js"></script>
+<script src="../public/js"></script>
 </html>
